# precompress

./: .gitignore  Cargo.toml  README.md  br  br-async  br-async-linux-x64  br-async-mac-arm64  br-linux-x64  br-mac-arm64
src/: async.rs  br-async.rs  br.rs  ext.rs  hash.rs  lib.rs  op.rs  sync.rs
