[package]
name = "precompress"
version = "0.1.0"
authors = ["programingjd"]
edition = "2021"

[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "derive", "help", "usage", "color"]

[dependencies.brotli]
version = "6.0"
default-features = false
features = ["std", "disable-timer", "simd"]

[dependencies.highway]
version = "1.1"
default-features = false
features = []

[dependencies.tokio]
optional = true
version = "1.37"
default-features = false
features = ["fs", "rt-multi-thread", "io-util"]

[dependencies.rayon]
optional = true
version = "1.10"
default-features = false
features = []

[features]
default = ["sync"]
sync = ["dep:rayon"]
async = ["dep:tokio"]

[[bin]]
name = "br"
path = "src/br.rs"
required-features = ["sync"]

[[bin]]
name = "br-async"
path = "src/br-async.rs"
required-features = ["async"]
