[package]
name = "precompress_static"
version = "0.1.5"
edition = "2024"
authors = ["Jerome David <programingjd@gmail.com>"]
categories = ["compression"]
description = "Brotli pre-compression for http static content"
keywords = ["static", "compression", "brotli"]
license = "MIT"
repository = "https://github.com/programingjd/precompress"
include = [
    "Cargo.toml", "src", "LICENSE", "README.md"
]


[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "derive", "help", "usage", "color"]

[dependencies.brotli]
version = "8.0"
default-features = false
features = ["std", "disable-timer", "simd", "disallow_large_window_size", "no-stdlib-ffi-binding"]

[dependencies.highway]
version = "1.3"
default-features = false
features = []

[dependencies.tokio]
optional = true
version = "1.46"
default-features = false
features = ["fs", "rt-multi-thread", "io-util"]

[dependencies.rayon]
optional = true
version = "1.10"
default-features = false
features = []

[features]
default = ["sync"]
sync = ["dep:rayon"]
async = ["dep:tokio"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "br"
path = "src/br.rs"
required-features = ["sync"]

[[bin]]
name = "br-async"
path = "src/br-async.rs"
required-features = ["async"]

[profile.release]
lto = "fat"
codegen-units = 1
